--- a/recreated/TaoTajima/sass/_components.scss
+++ b/recreated/TaoTajima/sass/_components.scss
@@ -23,26 +23,43 @@
 
 .video-shader{
     z-index: -1; 
-    background-color: rgba(#000, .35);  
+    background-color: rgba(#000, .4);     
 }
 
 // TOP NAVIGATOIN LINKS 
 
 .links {
     
-    background-color: slateblue;
+    // background-color: slateblue;
     grid-column: 1 / -1; 
 
-    &__about {
+    padding: 1.5rem;  
+    display: grid;  
+    grid-template-columns: 1fr 1fr; 
+    align-items: start;   
 
+    font-size: 1.1rem;  
+    letter-spacing: 2px;   
+
+    &__about {
+        
+        justify-self: start; 
+        
         &--text,
         &--text:active {
             color: #fff;
             text-decoration: none;
         }
+
+        &--text:hover {
+            text-decoration: underline;  
+        }
     }
     
     &__social {
+         
+        text-transform: lowercase; 
+        justify-self: end; 
 
         &--face,
         &--face:active {
@@ -61,12 +78,68 @@
 }
 
 .main {
-    background-color: salmon;
+    // background-color: salmon;
 
+    grid-row: 2 / 3; 
     grid-column: 1 / -1; 
+
+    display: grid; 
+    grid-template-columns: 1fr;  
+    align-items: center; 
+}
+
+.navigation{
+    position: absolute; 
+}
+
+.header {  
+
+    grid-row: 2 / 3;
+    grid-column: 1 / -1;  
+
+    align-self: center; 
+    justify-self: center;  
+    // background-color: black;  
+
+    display: grid; 
+    grid-template-rows: repeat(3, max-content);  
+    grid-template-columns: max-content;     
+
+
+    &__job-title {
+        // background-color: black; 
+        justify-self: start;       
+        grid-row: 1 / 2;  
+        grid-column: 1 / -1;  
+        font-size: 1.8rem; 
+        letter-spacing: 1.3rem;  
+        font-weight: 500;        
+    }    
+    
+    &__name {
+        // background-color: blue; 
+        grid-row: 2 / 3;  
+        grid-column: 1 / -1; 
+        font-size: 3.8rem; 
+        letter-spacing: 5.5rem;
+    } 
+    
+    &__company { 
+        font-size: 1rem;    
+        letter-spacing: 2px; 
+        // background-color: green;
+        grid-row: 3 / 4;    
+        grid-column: 1 / -1;     
+        justify-self: end;      
+        margin-right: 5.5rem;   
+    }
 }
 
 .footer {
-    background-color: tomato;
+    // background-color: tomato;
     grid-column: 1 / -1; 
 }
+
+
+ 
+// utility classes
